--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "dev:prod": "NODE_ENV=nodemon server.js"
+    "seed": "node seed/todoList.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
